thumbnail a new hub model

--- a/kooplexhub/container/templates/container_list.html
+++ b/kooplexhub/container/templates/container_list.html
@@ -2,6 +2,9 @@
 
 {% load static %}
 
+{% block pagedescription %}
+Environments are user workspaces with limited resources, attached volumes and projects. Multiple environments can be running can run at the same time. <a href="https://xwiki.vo.elte.hu/en/kooplex-manual/environmentpanel"><span class="ms-2 bi bi-book"></span></a>
+{% endblock %}
 
 {# the search bar #}
 {% block search %}
