--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -47,7 +47,7 @@
               <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
                 <p class="fw-bolder">Image description:&nbsp;</p>
                 <p id="imageDescription"></p>
-                <img id="imageThumbnail" alt="TODO">
+		<img id="imageThumbnail" class="float-right border" alt="tn">
                 {{ form.descriptions }}
               </div>
             </div>
@@ -107,9 +107,12 @@ $("select[name='preferred_image']").change(function() {
     id = $(this).attr("value");
     if (id === "") {
       $("#imageDescription").text("");
+      $("#imageThumbnail").attr("src", "");
     } else {
       description = $("#image-description-" + id).attr("value");
       $("#imageDescription").text(description);
+      tn = $("#image-thumbnail-" + id).attr("value");
+      $("#imageThumbnail").attr("src", tn);
     }
   });
 }).change();
