--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -4,6 +4,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 {% endblock %}
 
+{% block pagedescription %}
+Projects are a good way to collaborate with each other without much restriction. Permissions on files and folders are set in a restrictive way protecting user's own work. <a href="https://xwiki.vo.elte.hu/en/kooplex-manual/projects"><span class="ms-2 bi bi-book"></span></a>
+{% endblock %}
 
 {# the search bar #}
 {% block search %}
