--- a/kooplexhub/volume/templates/volume_list.html
+++ b/kooplexhub/volume/templates/volume_list.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block pagedescription %}
+A volume is the place for storing large, read-only datasets and user created storages for e.g. tools and test datasets. <a href="https://xwiki.vo.elte.hu/en/kooplex-manual/storages"><span class="ms-2 bi bi-book"></span></a>
+{% endblock %}
+
 {% block bodycontent %}
 {# the search bar #}
 {% if volumes %}
