--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -18,7 +18,7 @@
     <div class="card-body text-dark fw-bold" id="click-containerbody-{{ container.id }}">
       <p class="card-text">
           {% container_image container %}
-          <img src="data:image/png;base64,{{ container.image.resourcetype_pic.get_image }}" height="50" style="display: flex;float: inline-end;">
+	  <img src="{{ container.image.thumbnail.img_src }}" alt="{{ container.image.thumbnail.name }}" height="50" style="display: flex;float: inline-end;">
       </p>
       <p class="card-text">
           {% container_resources container %}
