--- a/kooplexhub/report/templates/report_list.html
+++ b/kooplexhub/report/templates/report_list.html
@@ -4,6 +4,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 {% endblock %}
 
+{% block pagedescription %}
+Publish a static html, an interactive plot or an application, which can be accessed publicly. <a href="https://xwiki.vo.elte.hu/en/kooplex-manual/reports"><span class="ms-2 bi bi-book"></span></a>
+{% endblock %}
 
 {# the search bar #}
 {% block search %}
