--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -13,10 +13,10 @@
 <div class="container card shadow p-3 mt-3 mb-3 bg-light rounded">
   <form id="container-manage" class="form-horizontal was-validated" action="{{ url_post }}" method="post">
   {% csrf_token %}
-    {% title_with_button "You are now configuring <em>" container.friendly_name "</em> environment" %}
+    {% title_with_button "You are now configuring <em>" container.name "</em> environment" %}
     <ul class="nav nav-tabs" id="serviceConfigTabs" role="tablist">
       <li class="nav-item" role="presentation">
-        <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" id="tab-image" data-bs-toggle="tab" href="#image" role="tab" aria-controls="image" aria-selected="{% if active == "image" %}true{% else %}false{% endif %}">Name/Image</a>
+        <a class="nav-link mytab {% if active == "meta" %}active{% endif %}" id="tab-meta" data-bs-toggle="tab" href="#meta" role="tab" aria-controls="meta" aria-selected="{% if active == "meta" %}true{% else %}false{% endif %}">Name/Resources</a>
       </li>
   {% if app_project_installed %}
       <li class="nav-item" role="presentation">
@@ -49,7 +49,7 @@
     </ul>
   
     <div class="tab-content" id="serviceConfigTabContent">
-      <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="image" role="tabpanel" aria-labelledby="tab-image">
+      <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
         <div class="container-fluid">
           <div class="row row-cols-1 row-cols-md-2">
             <div class="col">
@@ -58,12 +58,17 @@
               </table>
             </div>
             <div class="col"> {# hide if small #}
-              <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+              <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="bg-warning rounded p-2 w-100 mt-2 mt-md-0">
                 <p class="fw-bolder">Image description:&nbsp;</p>
                 <p id="imageDescription"></p>
-                <img id="imageThumbnail" alt="tn">
+		<div class="clearfix"><img id="imageThumbnail" class="float-end" alt=""></div>
                 {{ form.descriptions }}
               </div>
+            </div>
+          </div>
+          <div class="row row-cols-1 p-2">
+            <div class="progress d-none" id="busybar" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" style="width: 100%">Retrieving cluster information...</div>
             </div>
           </div>
         </div>
@@ -158,9 +163,6 @@ function ws_callback(data) {
     $("input[name='cpurequest']").attr("max", data["avail_cpu"]);
     $("input[name='memoryrequest']").attr("max", data["avail_memory"]);
     $("input[name='gpurequest']").attr("max", data["avail_gpu"]);
-//    $("#thresholdhigh-cpurequest").text(data["total_cpu"]);
-//    $("#thresholdhigh-memoryrequest").text(data["total_memory"]);
-//    $("#thresholdhigh-gpurequest").text(data["total_gpu"]);
     $("#thresholdhigh-cpurequest").text(data["avail_cpu"]);
     $("#thresholdhigh-memoryrequest").text(data["avail_memory"]);
     $("#thresholdhigh-gpurequest").text(data["avail_gpu"]);
