--- a/kooplexhub/hub/templates/mainmenu.html
+++ b/kooplexhub/hub/templates/mainmenu.html
@@ -24,7 +24,7 @@
     {% endif %}
     {% if app_education_installed %}
     <li class="nav-item mt-2" data-toggle="tooltip" title="Education" data-placement="bottom">
-      <a class="{{ li_a_s }} nav-link {% if menu_education %}active border-1 border-start{% endif %}" href="{% url 'education:student' %}"><i class="bi bi-textarea-t"></i><span class="d-none d-xl-inline">&nbsp;Education</span></a>
+      <a class="{{ li_a_s }} nav-link {% if menu_education %}active border-1 border-start{% endif %}" href="{% url 'education:courses' %}"><i class="bi bi-textarea-t"></i><span class="d-none d-xl-inline">&nbsp;Education</span></a>
     </li>
     {% endif %}
     <li class="nav-item mt-2"  data-toggle="tooltip" title="List and manage attachments and volumes" data-placement="bottom">
